chore: check style